--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="container">
       <!-- fork ribbon -->
-      <a href="https://github.com/manebit" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+      <a href="https://github.com/ManeBit/DuhMyIP" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
       <div class="jumbotron" style="padding: 1px;">
       	<h1 onclick='playTitleSound();'>Duh My IP!</h1>
@@ -49,7 +49,7 @@
 
         <div class="col-lg-6">
           <h4><img src="https://github.com/favicon.ico"> Source Code Available</h4>
-          <p>Want to make your own 'My IP'? Go ahead and <a href="https://github.com/manebit" target="_blank">fork me</a> on GitHub. Don't worry. I've been stabbed by forks plenty of times before :-)</p>
+          <p>Want to make your own 'My IP'? Go ahead and <a href="https://github.com/ManeBit/DuhMyIP" target="_blank">fork me</a> on GitHub. Don't worry. I've been stabbed by forks plenty of times before :-)</p>
         </div>
       </div>
       
