--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p><a class="btn btn-lg btn-success" href="#" role="button" onclick='onButtonClick();'>Duh My IP</a></p>
         
       	<!-- fb button -->
-      	<div style="vertical-align: text-bottom !important;" class="fb-like" data-href="http://manebit.github.io/DuhMyIP/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+	  	<div style="vertical-align: text-bottom !important;" class="fb-like" data-href="http://manebit.github.io/DuhMyIP/" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
 	  	<!-- twitter button -->
 	  	<a href="https://twitter.com/share" class="twitter-share-button" data-hashtags="duhmyip">Tweet</a>
 	  	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
