new constants and image now clickable

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<h1 onclick='playTitleSound();'>Duh My IP!</h1><p></p>
 			
 			<!-- title image -->
-			<img id="awesome" src="img/special.png" length="50%" width="50%"><p></p>
+			<img onclick='playTitleSound();' id="awesome" src="img/special.png" length="50%" width="50%"><p></p>
 			
 			<!-- ip display -->
 			<h1><font size="6">Your IP is:</font> <script type="text/javascript">document.write(ip);</script></h1>
