--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 	<!-- Fonts -->
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
 
 	<!-- for finding the ip -->
 	<script language="Javascript" src="http://www.codehelper.io/api/ips/?js"></script>
@@ -64,7 +63,7 @@
 			<h1 onclick='playTitleSound();'>Duh My IP!</h1><p></p>
 			
 			<!-- title image -->
-			<img onclick='playTitleSound();' id="awesome" src="img/special.png" length="50%" width="50%"><p></p>
+			<img style="cursor: pointer;" onclick='playTitleSound();' id="awesome" src="img/special.png" length="50%" width="50%"><p></p>
 			
 			<!-- ip display -->
 			<h1><font size="6">Your IP is:</font> <script type="text/javascript">document.write(ip);</script></h1>
