added some common keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Duh My IP! Get your IP read!">
+	<meta name="keywords" content="duh,duhmyip,ip,myip,saymyip,say,speakmyip,speak,funny,findmyip">
 	<meta name="author"      content="thedmeyer">
 
 	<title>Duh My IP!</title>
