working on https compatibility

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<link rel="shortcut icon" href="img/special.png">
 
 	<!-- Bootstrap itself -->
-	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
 	<!-- Custom styles -->
 	<link href="css/jumbotron-narrow.css" rel="stylesheet">
 
 	<!-- Fonts -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<!-- for finding the ip -->
 	<script language="Javascript" src="http://www.codehelper.io/api/ips/?js"></script>
