--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 	<!-- Fonts -->
 	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-	<!-- for finding the ip -->
-	<script language="Javascript" src="http://www.codehelper.io/api/ips/?js"></script>
 	
 	<!-- saying the ip js -->
 	<script language="Javascript" src="js/saymyip.js"></script>
+	
+	<!-- for finding the ip -->
+	<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=defineIP"></script>
 	
 	<!-- fork ribbon -->
 	<a href="https://github.com/thedmeyer/DuhMyIP" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
@@ -37,7 +37,6 @@
 
 	  ga('create', 'UA-41248043-10', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
 </head>
 
