--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
     <script>
         // overriding real ip with parameter in url
-        ipstart = (location.href.indexOf("ip=")+3);
+        ipstart = (location.href.indexOf("ip="));
         if(ipstart != -1) { // parameter "ip" is present
-            ipend = (location.href.indexOf("&", ipstart));
-            if (ipend == -1) ipend = (location.href.indexOf("#", ipstart));
+            ipend = (location.href.indexOf("&", ipstart+3));
+            if (ipend == -1) ipend = (location.href.indexOf("#", ipstart+3));
             if (ipend == -1) ipend = location.href.length;
-            ip = location.href.substring(ipstart,ipend);
+            ip = location.href.substring(ipstart+3,ipend);
         }
     </script>
 	<!-- facebook like button -->
