--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Duh My IP! Get your IP read!">
-	<meta name="keywords" 	 content="duh,duhmyip,ip,myip,saymyip,say,speakmyip,speak,funny,findmyip,dumb,address">
+	<meta name="keywords" content="duh,duhmyip,ip,myip,saymyip,say,speakmyip,speak,funny,findmyip">
 	<meta name="author"      content="thedmeyer">
 
 	<title>Duh My IP!</title>
@@ -20,7 +20,7 @@
 	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<!-- for finding the ip -->
-	<script language="Javascript" src="https://api.ipify.org/?format=jsonp&callback=var%20callback_ip="></script>
+	<script language="Javascript" src="http://www.codehelper.io/api/ips/?js"></script>
 	
 	<!-- saying the ip js -->
 	<script language="Javascript" src="js/saymyip.js"></script>
