--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		
 		<!-- footer -->
 		<div class="footer">
-			<p>Created by thedmeyer</p>
+			<p>Created by David Meyer</p>
 		</div>
 		<!-- end footer -->
 		
