Reuse Audio Element to fix Safari Issue

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 			<!-- ip display -->
 			<h1><font size="6">Your IP is:</font> <script type="text/javascript">document.write(ip);</script></h1>
 			
+			<!-- audio element -->
+			<audio id="playitagain"></audio>
+			
 			<!-- some info -->
 			<p class="lead">Just click the button below to hear your IP address in the most dumb way possible. I promise, it will be stupid...</p>
 			
