--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p><a class="btn btn-lg btn-success" href="#" role="button" onclick='onButtonClick();'>Duh My IP</a></p>
 
             <!-- fb button -->
-            <div class="fb-like" data-href="http://manebit.github.io/DuhMyIP/" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
+            <div class="fb-like" data-href="http://DuhMyIP.com" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
 
             <!-- twitter button -->
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://DuhMyIP.com" data-hashtags="DuhMyIP">Tweet</a>
